--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "shortid": "^2.2.13"
   },
   "devDependencies": {
     "eslint": "^5.4.0",
