--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "create-tables": "node scripts/create-tables.js",
+    "drop-tables": "node scripts/drop-tables.js",
+    "recreate-tables": "npm run drop-tables && npm run create-tables",
     "lint": "eslint .",
     "pretest": "npm run lint",
     "test": "exit 0",
@@ -14,11 +17,14 @@
   "dependencies": {
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "knex": "^0.15.2",
     "morgan": "^1.9.0",
+    "pg": "^7.4.3",
     "shortid": "^2.2.13"
   },
   "devDependencies": {
     "eslint": "^5.4.0",
     "nodemon": "^1.18.3"
-  }
+  },
+  "keywords": []
 }
