--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
     "seed-animals": "node scripts/seed-animals.js",
     "seed-data": "npm run seed-types && npm run seed-animals",
     "db-load-all": "npm run recreate-tables && npm run seed-data",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
+    "pretest": "npm run lint",
+    "test": "exit 0",
     "start:watch": "nodemon server.js",
     "start": "node server.js"
   },
